# GenshinPlugin-for-TrafficMonitor

./: .gitignore  BUILD.md  CMakeLists.txt  DataManager.cpp  DataManager.h  GenshinItems.cpp  GenshinItems.h  GenshinPlugin.rc  HttpClient.cpp  HttpClient.h  OptionsDlg.cpp  OptionsDlg.h  PluginGenshin.cpp  PluginGenshin.h  README.md  STATUS.md  pch.h  resource.h
